[PAY-1620] Fix disabled play button for unlocked gated tracks on Mobile Web (#3779)

--- a/apps/audius-client/packages/web/src/pages/track-page/components/mobile/TrackHeader.module.css
+++ b/apps/audius-client/packages/web/src/pages/track-page/components/mobile/TrackHeader.module.css
@@ -248,6 +248,7 @@
 .premiumTrackSectionWrapper {
   margin: 0;
   background: var(--neutral-light-10);
+  width: 100%;
 }
 
 .premiumTrackSection {
